client and company interface

--- a/sneakerShop/src/style/scss/components/_company-navbar.scss
+++ b/sneakerShop/src/style/scss/components/_company-navbar.scss
@@ -1,5 +1,5 @@
 .company-navbar{
-
+    position: absolute;
     .navbar-items{
 
         .navbar-link{
@@ -54,6 +54,27 @@
                     }
                 }
             }
+        }
+    }
+    &__navbar-signout{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        border: 1px solid #423FD7;
+        border-radius: 28px;
+        padding: 18px;
+        margin-top: 90px;
+
+        &:hover{
+            cursor: pointer;
+        }
+
+        .link-name{
+            color: #423FD7;
+            font-family: "Montserrat", sans-serif;
+            font-size: 16px;
+            font-weight: 400;
         }
     }
 }
