--- a/sneakerShop/src/style/scss/components/_modal.scss
+++ b/sneakerShop/src/style/scss/components/_modal.scss
@@ -1,13 +1,25 @@
 .modal{
-    width: 800px;
-    height: 665px;
-    background: #F8F8F8;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 130px;
-    box-shadow: 0px 0px 31.799999237060547px -5px rgba(0, 0, 0, 0.25); 
-    border-radius: 27px;
-    padding: 30px;
+    display: none;
+    width: 100%;
+    height: 110vh;
+    background-color: #0000007a;
+    position: fixed;
+    margin-left: -730px;
+    .modal-body{
+        width: 800px;
+        height: 665px;
+        background: #F8F8F8;
+        box-shadow: 0px 0px 31.799999237060547px -5px rgba(0, 0, 0, 0.25); 
+        border-radius: 27px;
+        padding: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 200px;
+    }
+
+    &__active{
+        display: block;
+    }
     .modal-top{
         width: 100%;
         border-bottom: 1px rgba(0, 0, 0, 0.20) solid;
