--- a/sneakerShop/src/style/scss/components/_modal.scss
+++ b/sneakerShop/src/style/scss/components/_modal.scss
@@ -5,6 +5,8 @@
     background-color: #0000007a;
     position: fixed;
     margin-left: -730px;
+    top: 0px;
+    
     .modal-body{
         width: 800px;
         height: 665px;
@@ -14,7 +16,7 @@
         padding: 30px;
         margin-left: auto;
         margin-right: auto;
-        margin-top: 200px;
+        margin-top: 40px;
     }
 
     &__active{
