--- a/sneakerShop/src/style/scss/main.scss
+++ b/sneakerShop/src/style/scss/main.scss
@@ -415,6 +415,9 @@ body {
         &__green{
             background-color: #219653;
         }
+        &__gray{
+            background-color: #868686;
+        }
 
         &:hover{
             border: 2px solid #7173F1;
