--- a/sneakerShop/src/style/scss/components/_modal.scss
+++ b/sneakerShop/src/style/scss/components/_modal.scss
@@ -9,7 +9,7 @@
     
     .modal-body{
         width: 800px;
-        height: 665px;
+        height: 800px;
         background: #F8F8F8;
         box-shadow: 0px 0px 31.799999237060547px -5px rgba(0, 0, 0, 0.25); 
         border-radius: 27px;
@@ -26,6 +26,14 @@
         width: 100%;
         border-bottom: 1px rgba(0, 0, 0, 0.20) solid;
         padding-bottom:25px ;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .close-modal{
+            font-size: 25px;
+            cursor: pointer;
+        }
     }
     &__content{
         display: flex;
